# UnityNativeScripting

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
Core/: README.md
Core/Tools/BridgeGen/: BridgeGen.csproj  Program.cs
Core/cpp/: CMakeLists.txt
Core/cpp/include/bridge/: bridge.h
Core/cpp/include/bridge/runtime/: core_app.h  core_context.h  game_entry.h
Core/cpp/src/api/: bridge_api.cpp
Core/cpp/src/core/: command_stream.cpp  command_stream.h  core_instance.cpp  core_instance.h
Core/csharp/Bridge.Core/: Bridge.Core.csproj  BridgeCore.cs  CommandStream.cs
Core/csharp/Bridge.Core/Interop/: BridgeNative.cs
Core/docs/: BRIDGE_DESIGN.md  BUILD.md  PERF_NOTES.md  PERF_OPTIMIZATIONS.md  UNITY_IL2CPP_SOURCE_BUILD.md  UNITY_WIN_NATIVE_LOADING.md
Tests/: README.md
Tests/assets/Main/Prefabs/: Bot.bytes
Tests/cpp/: CMakeLists.txt
Tests/cpp/demo_game/: CMakeLists.txt
Tests/cpp/demo_game/src/: demo_asset_app.cpp  demo_asset_app.h  game_entry.cpp
Tests/cpp/robot_runner/: CMakeLists.txt  main.cpp
Tests/csharp/RobotHost/: Program.cs  RobotHost.csproj
Tests/csharp/RobotHost/Bind/: Args.cs  FileAssetProvider.cs  IRobotHostApi.cs  IRobotHostStats.cs  NativeBridgeResolver.cs  Paths.cs  RobotHostApi.cs  RobotNullHostApi.cs  WorldState.cs
Tests/defs/: demo_asset_api.def  demo_entity_api.def  demo_log_api.def
Tests/unity/Assets/BridgeCore/: README.md
Tests/unity/Assets/BridgeCore/Editor/: BridgeCoreWinSync.cs
Tests/unity/Assets/BridgeCore/Managed/Bridge.Core/: BridgeCore.cs  CommandStream.cs
Tests/unity/Assets/BridgeCore/Managed/Bridge.Core/Interop/: BridgeNative.cs  Structs.cs
Tests/unity/Assets/BridgeCore/Runtime/: Bridge.Core.Unity.asmdef
Tests/unity/Assets/BridgeDemoGame/: README.md  Test.unity
Tests/unity/Assets/BridgeDemoGame/Editor/Performance/: BridgeDemoGame.PerformanceTests.asmdef  BridgeDispatchPerformanceTests.cs
Tests/unity/Assets/BridgeDemoGame/PlayModeTests/: BridgeDemoGame.PlayModeTests.asmdef  BridgeMonoGcTests.cs  BridgeRuntimeSmokeTests.cs  BridgeSourceModeThroughputTests.cs
Tests/unity/Assets/BridgeDemoGame/Runtime/: BridgeDemoGame.Runtime.asmdef  DemoGameUnityAssetService.cs  DemoGameUnityHostApi.Asset.cs  DemoGameUnityHostApi.Entity.cs  DemoGameUnityHostApi.Log.cs  DemoGameUnityHostApi.cs  DemoGameUnityRunner.cs
Tests/unity/Assets/BridgeDemoGame/Runtime/Host/: DemoGameUnityHostApi.Asset.cs  DemoGameUnityHostApi.Entity.cs  DemoGameUnityHostApi.Log.cs  DemoGameUnityHostApi.cs
Tests/unity/Assets/BridgeDemoGame/Runtime/Runner/: DemoGameUnityRunner.cs
Tests/unity/ProjectSettings/: ProjectSettings.asset
Tools/: RunPerf.ps1
